--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "emailjs-com": "^3.2.0",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
