--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "google-maps-react": "^2.0.6",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
@@ -33,6 +34,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "dev": "nodemon src/app -e js,hbs",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
