--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "google-maps-react": "^2.0.6",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.22",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-svg": "^14.0.17",
