--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-bootstrap": "^2.0.2",
 		"react-dom": "^17.0.2",
 		"react-elastic-carousel": "^0.11.5",
+		"react-hot-toast": "^2.2.0",
 		"react-icons": "^4.3.1",
 		"react-responsive-carousel": "^3.2.22",
 		"react-reveal": "^1.2.2",
