--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@craco/craco": "^6.3.0",
+		"@craco/craco": "^6.4.5",
 		"@emotion/react": "^11.5.0",
 		"@emotion/styled": "^11.3.0",
 		"@fortawesome/fontawesome-free": "^5.15.4",
@@ -22,6 +22,7 @@
 		"animate.css": "^4.1.1",
 		"aos": "^2.3.4",
 		"bootstrap": "^5.1.3",
+		"craco": "^0.0.3",
 		"emailjs-com": "^3.2.0",
 		"google-maps-react": "^2.0.6",
 		"nodemon": "^2.0.15",
@@ -42,8 +43,8 @@
 	},
 	"scripts": {
 		"dev": "nodemon src/app -e js,hbs",
-		"start": "craco start",
-		"build": "craco build",
+		"start": "react-scripts --openssl-legacy-provider start",
+		"build": "react-scripts --openssl-legacy-provider build",
 		"test": "craco test",
 		"eject": "react-scripts eject"
 	},
