--- a/package.json
+++ b/package.json
@@ -1,75 +1,74 @@
 {
-	"name": "gdsc-djsce",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"@craco/craco": "^6.3.0",
-		"@emotion/react": "^11.5.0",
-		"@emotion/styled": "^11.3.0",
-		"@fortawesome/fontawesome-free": "^5.15.4",
-		"@fortawesome/fontawesome-svg-core": "^1.2.36",
-		"@fortawesome/free-brands-svg-icons": "^5.15.4",
-		"@fortawesome/free-solid-svg-icons": "^5.15.4",
-		"@fortawesome/react-fontawesome": "^0.1.16",
-		"@material-ui/core": "^4.12.3",
-		"@material-ui/icons": "^4.11.2",
-		"@mui/icons-material": "^5.0.5",
-		"@mui/material": "^5.0.6",
-		"@mui/styles": "^5.0.2",
-		"@testing-library/jest-dom": "^5.14.1",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
-		"animate.css": "^4.1.1",
-		"aos": "^2.3.4",
-		"bootstrap": "^5.1.3",
-		"craco": "^0.0.3",
-		"emailjs-com": "^3.2.0",
-		"google-maps-react": "^2.0.6",
-		"nodemon": "^2.0.15",
-		"react": "^17.0.2",
-		"react-animate-on-scroll": "^2.1.5",
-		"react-bootstrap": "^2.0.2",
-		"react-dom": "^17.0.2",
-		"react-elastic-carousel": "^0.11.5",
-		"react-hot-toast": "^2.2.0",
-		"react-icons": "^4.3.1",
-		"react-responsive-carousel": "^3.2.22",
-		"react-reveal": "^1.2.2",
-		"react-router-dom": "^5.3.0",
-		"react-scripts": "^5.0.1",
-		"react-svg": "^14.0.17",
-		"styled-components": "^5.3.3",
-		"web-vitals": "^1.1.2"
-	},
-	"scripts": {
-		"dev": "nodemon src/app -e js,hbs",
-		"start": "react-scripts --openssl-legacy-provider start",
-		"build": "react-scripts --openssl-legacy-provider build",
-		"test": "craco test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"autoprefixer": "^9.8.8",
-		"postcss": "^7.0.39",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-	},
-	"homepage": "https://gdsc-djsce.netlify.app"
+  "name": "gdsc-djsce",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@craco/craco": "^6.3.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
+    "@mui/styles": "^5.0.2",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
+    "craco": "^0.0.3",
+    "emailjs-com": "^3.2.0",
+    "google-maps-react": "^2.0.6",
+    "nodemon": "^2.0.15",
+    "react": "^17.0.2",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^2.0.2",
+    "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-hot-toast": "^2.2.0",
+    "react-icons": "^4.3.1",
+    "react-responsive-carousel": "^3.2.22",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^5.0.1",
+    "react-svg": "^14.0.17",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+  },
+  "homepage": "https://gdsc-djsce.netlify.app"
 }
