--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "@stahl.luke/react-reveal": "^1.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -29,7 +30,6 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "react-responsive-carousel": "^3.2.22",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-svg": "^14.0.17",
